codepkg/objects/Worker__c.object
<CustomObject>
    <fields>
        <fullName>Faclty__c</fullName>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Workers (Faculty)</relationshipLabel>
        <relationshipName>Workers1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decan</fullName>
                </value>
                <value>
                    <fullName>Rector</fullName>
                </value>
                <value>
                    <fullName>Zaveduischii</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Workers</relationshipLabel>
        <relationshipName>Workers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Worker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Worker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workers</pluralLabel>
    <recordTypes>
        <fullName>Manager</fullName>
        <active>true</active>
        <label>Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>